Fixed bug #76803 ftruncate changes file pointer