main/streams/plain_wrapper.c
@@ -857,6 +857,12 @@ static int php_stdiop_set_option(php_stream *stream, int option, int value, void
 					if (INVALID_HANDLE_VALUE == h) {
 						return PHP_STREAM_OPTION_RETURN_ERR;
 					}
+
+					LARGE_INTEGER old_sz;
+					if (!GetFileSizeEx(h, &old_sz)) {
+						return PHP_STREAM_OPTION_RETURN_ERR;
+					}
+
 					LARGE_INTEGER sz;
 #if defined(_WIN64)
 					sz.HighPart = (new_size >> 32);
@@ -869,6 +875,9 @@ static int php_stdiop_set_option(php_stream *stream, int option, int value, void
 						return PHP_STREAM_OPTION_RETURN_ERR;
 					}
 					if (0 == SetEndOfFile(h)) {
+						return PHP_STREAM_OPTION_RETURN_ERR;
+					}
+					if (INVALID_SET_FILE_POINTER == SetFilePointerEx(h, old_sz, NULL, FILE_BEGIN) && NO_ERROR != GetLastError()) {
 						return PHP_STREAM_OPTION_RETURN_ERR;
 					}
 					return PHP_STREAM_OPTION_RETURN_OK;
